[package]
name = "sacn"
description = "Rust sACN implementation."
version = "0.9.0"
edition = "2021"
readme = "README.md"
keywords = ["acn", "sacn", "dmx", "e131", "ansi"]
authors = ["Lukas Schmierer <lukas.schmierer@lschmierer.de>", "Paul Lancaster <paul@lancasterzone.com>"]
documentation = ""
repository = "https://github.com/Lan2u/RustSacn"
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = { version = "1.2.2", features = [] }
heapless = { version = "0.5.3", optional = true }
socket2 = { version = "0.3.4", features = ["reuseport"] }
libc = { version = "0.2.67" } 

lazy_static = "1.4.0"

uuid = { version = "0.6.3", features = ["use_std", "v4"] }
thiserror = { version = "2.0.11", default-features = false }

[dev-dependencies]
thiserror = { version = "2.0.11", default-features = false }

[features]
default = []
std = []
unstable = ["heapless"]

[badges]
travis-ci = { repository = "Lan2u/RustSacn" }
