[package]
name = "sacn-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = []


[dependencies]
byteorder = { version = "1.5.0", default-features = false }
fugit = "0.3.7"
heapless = { version = "0.8.0", default-features = false }
socket2 = { version = "0.5.8", features = ["all"] }
thiserror = { version = "2.0.11", default-features = false }
uuid = { version = "1.15.1", features = ["v4"] }

[dev-dependencies]
thiserror = { version = "2.0.11", default-features = false }
