[package]
name = "sacn"
description = "Rust sACN implementation."
version = "0.9.0"
edition = "2024"
readme = "README.md"
keywords = ["acn", "sacn", "dmx", "e131", "ansi"]
authors = [
    "Lukas Schmierer <lukas.schmierer@lschmierer.de>",
    "Paul Lancaster <paul@lancasterzone.com>",
]
documentation = ""
repository = "https://github.com/Lan2u/RustSacn"
license = "MIT OR Apache-2.0"

[dependencies]
sacn-core = { path = "../sacn-core" }
byteorder = { version = "1.5.0", default-features = false }
heapless = { version = "0.8.0", default-features = false }
socket2 = { version = "0.5.8", features = ["all"] }
libc = { version = "0.2.169" }

uuid = { version = "1.14.0", features = ["v4"] }
thiserror = { version = "2.0.11", default-features = false }

[dev-dependencies]
thiserror = { version = "2.0.11", default-features = false }

[features]
default = ["std"]
std = []

[badges]
travis-ci = { repository = "Lan2u/RustSacn" }
